// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests to make sure the create functions work Make sure the correct modal appears when trying to create a new file 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    class="modal-open"
    style="padding-right: 0px;"
  >
    <div
      aria-hidden="true"
    >
      <div
        class="container"
      >
        <div
          class="box"
        >
          <div
            class="container"
          >
            <div
              class="menu-bar"
            >
              <button>
                Create new file
              </button>
              <button>
                Create new folder
              </button>
            </div>
          </div>
          <div
            class="path-container container-fluid"
          >
            <div
              class="align-items-center mx-auto row no-gutters"
            >
              <div
                class="col-md-1"
              >
                <button
                  class="btn btn-secondary btn-block"
                  disabled=""
                  id="back-button"
                  type="button"
                >
                  <i
                    class="fas fa-level-up-alt"
                  />
                </button>
              </div>
              <div
                class="col-md-11"
              >
                <div
                  class="path-text-container"
                >
                  <div
                    class="path-link active"
                  >
                    /
                    root
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="directory-container"
          >
            <div
              class="directory-item"
            >
              <div
                class="options-button"
              >
                <i
                  class="fas fa-ellipsis-h fa-fw"
                />
              </div>
              <div
                class="contextual-overlay hidden"
              >
                <div
                  class="context-button hidden"
                >
                  <div
                    class="context-button-text hidden"
                  >
                    Rename
                  </div>
                </div>
                <div
                  class="context-button hidden"
                >
                  <div
                    class="context-button-text hidden"
                  >
                    Delete
                  </div>
                </div>
              </div>
              <i
                class="mt-3 far fa-file-alt fa-5x"
              />
              <div
                class="trunc-container"
              >
                <div
                  class="file-name"
                >
                  fact_marvel_beats_dc
                  .
                </div>
                <div
                  class="file-extension"
                >
                  txt
                </div>
              </div>
            </div>
            <div
              class="directory-item folder"
            >
              <div
                class="options-button"
              >
                <i
                  class="fas fa-ellipsis-h fa-fw"
                />
              </div>
              <div
                class="contextual-overlay hidden"
              >
                <div
                  class="context-button hidden"
                >
                  <div
                    class="context-button-text hidden"
                  >
                    Rename
                  </div>
                </div>
                <div
                  class="context-button hidden"
                >
                  <div
                    class="context-button-text hidden"
                  >
                    Delete
                  </div>
                </div>
              </div>
              <i
                class="mt-4 far fa-folder fa-5x"
              />
              <div
                class="trunc-container"
              >
                <div
                  class="file-name"
                >
                  marvel
                </div>
              </div>
            </div>
            <div
              class="directory-item folder"
            >
              <div
                class="options-button"
              >
                <i
                  class="fas fa-ellipsis-h fa-fw"
                />
              </div>
              <div
                class="contextual-overlay hidden"
              >
                <div
                  class="context-button hidden"
                >
                  <div
                    class="context-button-text hidden"
                  >
                    Rename
                  </div>
                </div>
                <div
                  class="context-button hidden"
                >
                  <div
                    class="context-button-text hidden"
                  >
                    Delete
                  </div>
                </div>
              </div>
              <i
                class="mt-4 far fa-folder fa-5x"
              />
              <div
                class="trunc-container"
              >
                <div
                  class="file-name"
                >
                  dc
                </div>
              </div>
            </div>
            <div
              class="directory-item folder"
            >
              <div
                class="options-button"
              >
                <i
                  class="fas fa-ellipsis-h fa-fw"
                />
              </div>
              <div
                class="contextual-overlay hidden"
              >
                <div
                  class="context-button hidden"
                >
                  <div
                    class="context-button-text hidden"
                  >
                    Rename
                  </div>
                </div>
                <div
                  class="context-button hidden"
                >
                  <div
                    class="context-button-text hidden"
                  >
                    Delete
                  </div>
                </div>
              </div>
              <i
                class="mt-4 far fa-folder fa-5x"
              />
              <div
                class="trunc-container"
              >
                <div
                  class="file-name"
                >
                  very
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="fade modal-backdrop show"
    />
    <div
      aria-modal="true"
      class="fade modal show"
      role="dialog"
      style="display: block;"
      tabindex="-1"
    >
      <div
        class="modal-dialog modal-lg modal-dialog-centered"
        role="document"
      >
        <div
          class="modal-content"
        >
          <div
            class="modal-header"
          >
            <div
              class="container"
            >
              <div
                class="justify-content-center row"
              >
                <div
                  class="col-md-6"
                >
                  <h4
                    class="text-center text-capitalize"
                  >
                    Create 
                    file
                  </h4>
                </div>
              </div>
            </div>
          </div>
          <div
            class="modal-body"
          >
            <div
              class="container"
            >
              <div
                class="row"
              >
                <div
                  class="col"
                >
                  <div
                    class="fade alert alert-primary show"
                    role="alert"
                  >
                    <p
                      class="text-center my-auto"
                    >
                      <b>
                        Creating 
                        file
                         in: 
                      </b>
                      root
                    </p>
                  </div>
                </div>
              </div>
              <div
                class="justify-content-center mb-4 row"
              >
                <div
                  class="col-md-12"
                >
                  <input
                    class="is-invalid is-valid form-control"
                    placeholder="Enter new name.."
                    value=""
                  />
                  <small
                    class="form-text text-muted"
                  >
                    Filenames may only contain letters, numbers dashes and underscores, and must have a file extension
                  </small>
                </div>
              </div>
              <div
                class="justify-content-center row"
              >
                <div
                  class="col-md-4"
                >
                  <button
                    class="btn btn-danger btn-block"
                    type="button"
                  >
                    Cancel
                  </button>
                </div>
                <div
                  class="col-md-4"
                >
                  <button
                    class="btn btn-primary btn-block"
                    disabled=""
                    type="button"
                  >
                    Confirm
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div
    aria-hidden="true"
  >
    <div
      class="container"
    >
      <div
        class="box"
      >
        <div
          class="container"
        >
          <div
            class="menu-bar"
          >
            <button>
              Create new file
            </button>
            <button>
              Create new folder
            </button>
          </div>
        </div>
        <div
          class="path-container container-fluid"
        >
          <div
            class="align-items-center mx-auto row no-gutters"
          >
            <div
              class="col-md-1"
            >
              <button
                class="btn btn-secondary btn-block"
                disabled=""
                id="back-button"
                type="button"
              >
                <i
                  class="fas fa-level-up-alt"
                />
              </button>
            </div>
            <div
              class="col-md-11"
            >
              <div
                class="path-text-container"
              >
                <div
                  class="path-link active"
                >
                  /
                  root
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="directory-container"
        >
          <div
            class="directory-item"
          >
            <div
              class="options-button"
            >
              <i
                class="fas fa-ellipsis-h fa-fw"
              />
            </div>
            <div
              class="contextual-overlay hidden"
            >
              <div
                class="context-button hidden"
              >
                <div
                  class="context-button-text hidden"
                >
                  Rename
                </div>
              </div>
              <div
                class="context-button hidden"
              >
                <div
                  class="context-button-text hidden"
                >
                  Delete
                </div>
              </div>
            </div>
            <i
              class="mt-3 far fa-file-alt fa-5x"
            />
            <div
              class="trunc-container"
            >
              <div
                class="file-name"
              >
                fact_marvel_beats_dc
                .
              </div>
              <div
                class="file-extension"
              >
                txt
              </div>
            </div>
          </div>
          <div
            class="directory-item folder"
          >
            <div
              class="options-button"
            >
              <i
                class="fas fa-ellipsis-h fa-fw"
              />
            </div>
            <div
              class="contextual-overlay hidden"
            >
              <div
                class="context-button hidden"
              >
                <div
                  class="context-button-text hidden"
                >
                  Rename
                </div>
              </div>
              <div
                class="context-button hidden"
              >
                <div
                  class="context-button-text hidden"
                >
                  Delete
                </div>
              </div>
            </div>
            <i
              class="mt-4 far fa-folder fa-5x"
            />
            <div
              class="trunc-container"
            >
              <div
                class="file-name"
              >
                marvel
              </div>
            </div>
          </div>
          <div
            class="directory-item folder"
          >
            <div
              class="options-button"
            >
              <i
                class="fas fa-ellipsis-h fa-fw"
              />
            </div>
            <div
              class="contextual-overlay hidden"
            >
              <div
                class="context-button hidden"
              >
                <div
                  class="context-button-text hidden"
                >
                  Rename
                </div>
              </div>
              <div
                class="context-button hidden"
              >
                <div
                  class="context-button-text hidden"
                >
                  Delete
                </div>
              </div>
            </div>
            <i
              class="mt-4 far fa-folder fa-5x"
            />
            <div
              class="trunc-container"
            >
              <div
                class="file-name"
              >
                dc
              </div>
            </div>
          </div>
          <div
            class="directory-item folder"
          >
            <div
              class="options-button"
            >
              <i
                class="fas fa-ellipsis-h fa-fw"
              />
            </div>
            <div
              class="contextual-overlay hidden"
            >
              <div
                class="context-button hidden"
              >
                <div
                  class="context-button-text hidden"
                >
                  Rename
                </div>
              </div>
              <div
                class="context-button hidden"
              >
                <div
                  class="context-button-text hidden"
                >
                  Delete
                </div>
              </div>
            </div>
            <i
              class="mt-4 far fa-folder fa-5x"
            />
            <div
              class="trunc-container"
            >
              <div
                class="file-name"
              >
                very
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Tests to make sure the create functions work Make sure the correct modal appears when trying to create a new folder 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    class="modal-open"
    style="padding-right: 0px;"
  >
    <div
      aria-hidden="true"
    >
      <div
        class="container"
      >
        <div
          class="box"
        >
          <div
            class="container"
          >
            <div
              class="menu-bar"
            >
              <button>
                Create new file
              </button>
              <button>
                Create new folder
              </button>
            </div>
          </div>
          <div
            class="path-container container-fluid"
          >
            <div
              class="align-items-center mx-auto row no-gutters"
            >
              <div
                class="col-md-1"
              >
                <button
                  class="btn btn-secondary btn-block"
                  disabled=""
                  id="back-button"
                  type="button"
                >
                  <i
                    class="fas fa-level-up-alt"
                  />
                </button>
              </div>
              <div
                class="col-md-11"
              >
                <div
                  class="path-text-container"
                >
                  <div
                    class="path-link active"
                  >
                    /
                    root
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="directory-container"
          >
            <div
              class="directory-item"
            >
              <div
                class="options-button"
              >
                <i
                  class="fas fa-ellipsis-h fa-fw"
                />
              </div>
              <div
                class="contextual-overlay hidden"
              >
                <div
                  class="context-button hidden"
                >
                  <div
                    class="context-button-text hidden"
                  >
                    Rename
                  </div>
                </div>
                <div
                  class="context-button hidden"
                >
                  <div
                    class="context-button-text hidden"
                  >
                    Delete
                  </div>
                </div>
              </div>
              <i
                class="mt-3 far fa-file-alt fa-5x"
              />
              <div
                class="trunc-container"
              >
                <div
                  class="file-name"
                >
                  fact_marvel_beats_dc
                  .
                </div>
                <div
                  class="file-extension"
                >
                  txt
                </div>
              </div>
            </div>
            <div
              class="directory-item folder"
            >
              <div
                class="options-button"
              >
                <i
                  class="fas fa-ellipsis-h fa-fw"
                />
              </div>
              <div
                class="contextual-overlay hidden"
              >
                <div
                  class="context-button hidden"
                >
                  <div
                    class="context-button-text hidden"
                  >
                    Rename
                  </div>
                </div>
                <div
                  class="context-button hidden"
                >
                  <div
                    class="context-button-text hidden"
                  >
                    Delete
                  </div>
                </div>
              </div>
              <i
                class="mt-4 far fa-folder fa-5x"
              />
              <div
                class="trunc-container"
              >
                <div
                  class="file-name"
                >
                  marvel
                </div>
              </div>
            </div>
            <div
              class="directory-item folder"
            >
              <div
                class="options-button"
              >
                <i
                  class="fas fa-ellipsis-h fa-fw"
                />
              </div>
              <div
                class="contextual-overlay hidden"
              >
                <div
                  class="context-button hidden"
                >
                  <div
                    class="context-button-text hidden"
                  >
                    Rename
                  </div>
                </div>
                <div
                  class="context-button hidden"
                >
                  <div
                    class="context-button-text hidden"
                  >
                    Delete
                  </div>
                </div>
              </div>
              <i
                class="mt-4 far fa-folder fa-5x"
              />
              <div
                class="trunc-container"
              >
                <div
                  class="file-name"
                >
                  dc
                </div>
              </div>
            </div>
            <div
              class="directory-item folder"
            >
              <div
                class="options-button"
              >
                <i
                  class="fas fa-ellipsis-h fa-fw"
                />
              </div>
              <div
                class="contextual-overlay hidden"
              >
                <div
                  class="context-button hidden"
                >
                  <div
                    class="context-button-text hidden"
                  >
                    Rename
                  </div>
                </div>
                <div
                  class="context-button hidden"
                >
                  <div
                    class="context-button-text hidden"
                  >
                    Delete
                  </div>
                </div>
              </div>
              <i
                class="mt-4 far fa-folder fa-5x"
              />
              <div
                class="trunc-container"
              >
                <div
                  class="file-name"
                >
                  very
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="fade modal-backdrop show"
    />
    <div
      aria-modal="true"
      class="fade modal show"
      role="dialog"
      style="display: block;"
      tabindex="-1"
    >
      <div
        class="modal-dialog modal-lg modal-dialog-centered"
        role="document"
      >
        <div
          class="modal-content"
        >
          <div
            class="modal-header"
          >
            <div
              class="container"
            >
              <div
                class="justify-content-center row"
              >
                <div
                  class="col-md-6"
                >
                  <h4
                    class="text-center text-capitalize"
                  >
                    Create 
                    folder
                  </h4>
                </div>
              </div>
            </div>
          </div>
          <div
            class="modal-body"
          >
            <div
              class="container"
            >
              <div
                class="row"
              >
                <div
                  class="col"
                >
                  <div
                    class="fade alert alert-primary show"
                    role="alert"
                  >
                    <p
                      class="text-center my-auto"
                    >
                      <b>
                        Creating 
                        folder
                         in: 
                      </b>
                      root
                    </p>
                  </div>
                </div>
              </div>
              <div
                class="justify-content-center mb-4 row"
              >
                <div
                  class="col-md-12"
                >
                  <input
                    class="is-invalid is-valid form-control"
                    placeholder="Enter new name.."
                    value=""
                  />
                  <small
                    class="form-text text-muted"
                  >
                    Folder names may only contains letters, numbers, dashes and underscores
                  </small>
                </div>
              </div>
              <div
                class="justify-content-center row"
              >
                <div
                  class="col-md-4"
                >
                  <button
                    class="btn btn-danger btn-block"
                    type="button"
                  >
                    Cancel
                  </button>
                </div>
                <div
                  class="col-md-4"
                >
                  <button
                    class="btn btn-primary btn-block"
                    disabled=""
                    type="button"
                  >
                    Confirm
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div
    aria-hidden="true"
  >
    <div
      class="container"
    >
      <div
        class="box"
      >
        <div
          class="container"
        >
          <div
            class="menu-bar"
          >
            <button>
              Create new file
            </button>
            <button>
              Create new folder
            </button>
          </div>
        </div>
        <div
          class="path-container container-fluid"
        >
          <div
            class="align-items-center mx-auto row no-gutters"
          >
            <div
              class="col-md-1"
            >
              <button
                class="btn btn-secondary btn-block"
                disabled=""
                id="back-button"
                type="button"
              >
                <i
                  class="fas fa-level-up-alt"
                />
              </button>
            </div>
            <div
              class="col-md-11"
            >
              <div
                class="path-text-container"
              >
                <div
                  class="path-link active"
                >
                  /
                  root
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="directory-container"
        >
          <div
            class="directory-item"
          >
            <div
              class="options-button"
            >
              <i
                class="fas fa-ellipsis-h fa-fw"
              />
            </div>
            <div
              class="contextual-overlay hidden"
            >
              <div
                class="context-button hidden"
              >
                <div
                  class="context-button-text hidden"
                >
                  Rename
                </div>
              </div>
              <div
                class="context-button hidden"
              >
                <div
                  class="context-button-text hidden"
                >
                  Delete
                </div>
              </div>
            </div>
            <i
              class="mt-3 far fa-file-alt fa-5x"
            />
            <div
              class="trunc-container"
            >
              <div
                class="file-name"
              >
                fact_marvel_beats_dc
                .
              </div>
              <div
                class="file-extension"
              >
                txt
              </div>
            </div>
          </div>
          <div
            class="directory-item folder"
          >
            <div
              class="options-button"
            >
              <i
                class="fas fa-ellipsis-h fa-fw"
              />
            </div>
            <div
              class="contextual-overlay hidden"
            >
              <div
                class="context-button hidden"
              >
                <div
                  class="context-button-text hidden"
                >
                  Rename
                </div>
              </div>
              <div
                class="context-button hidden"
              >
                <div
                  class="context-button-text hidden"
                >
                  Delete
                </div>
              </div>
            </div>
            <i
              class="mt-4 far fa-folder fa-5x"
            />
            <div
              class="trunc-container"
            >
              <div
                class="file-name"
              >
                marvel
              </div>
            </div>
          </div>
          <div
            class="directory-item folder"
          >
            <div
              class="options-button"
            >
              <i
                class="fas fa-ellipsis-h fa-fw"
              />
            </div>
            <div
              class="contextual-overlay hidden"
            >
              <div
                class="context-button hidden"
              >
                <div
                  class="context-button-text hidden"
                >
                  Rename
                </div>
              </div>
              <div
                class="context-button hidden"
              >
                <div
                  class="context-button-text hidden"
                >
                  Delete
                </div>
              </div>
            </div>
            <i
              class="mt-4 far fa-folder fa-5x"
            />
            <div
              class="trunc-container"
            >
              <div
                class="file-name"
              >
                dc
              </div>
            </div>
          </div>
          <div
            class="directory-item folder"
          >
            <div
              class="options-button"
            >
              <i
                class="fas fa-ellipsis-h fa-fw"
              />
            </div>
            <div
              class="contextual-overlay hidden"
            >
              <div
                class="context-button hidden"
              >
                <div
                  class="context-button-text hidden"
                >
                  Rename
                </div>
              </div>
              <div
                class="context-button hidden"
              >
                <div
                  class="context-button-text hidden"
                >
                  Delete
                </div>
              </div>
            </div>
            <i
              class="mt-4 far fa-folder fa-5x"
            />
            <div
              class="trunc-container"
            >
              <div
                class="file-name"
              >
                very
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
